--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon server.js"
   },
   "keywords": [],
+  "engines": {
+    "node": "13.9.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
